[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-recommendation-system"
version = "1.0.0"
description = "AI-powered movie recommendation system using FastAPI, Neo4j, and LangChain"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["movie", "recommendation", "ai", "fastapi", "neo4j"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "langchain-openai==0.1.25",
    "openai==1.51.0",
    "neo4j==5.15.0",
    "firebase-admin==6.2.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "typing-extensions==4.8.0",
]

[project.optional-dependencies]
dev = [
    "streamlit==1.28.0",
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools]
packages = ["movie_recommendation"]

[tool.setuptools.package-dir]
"movie_recommendation" = "."
